Fix gap for property filter tokens

--- a/src/internal/components/token-list/styles.scss
+++ b/src/internal/components/token-list/styles.scss
@@ -13,6 +13,7 @@
   gap: awsui.$space-scaled-xs;
 
   &.horizontal {
+    gap: awsui.$space-xs;
     flex-direction: row;
   }
   &.vertical {
